Use various .valueOf() methods for primitive wrappers